objects/ssot__ComplaintParticipant__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ComplaintId__c</fullName>
        <label>Complaint</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ComplaintParticipantRole__c</fullName>
        <label>Role</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ComplaintParticipantStatus__c</fullName>
        <label>Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Complaint Participant Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ParticipantId__c</fullName>
        <label>Participant</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ParticipantObject__c</fullName>
        <label>Participant Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1718543591410_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ComplaintParticipant_ParticipantId_m_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>ComplaintParticipant_ParticipantId_m_rel</relationshipLabel>
        <relationshipName>rel_1718543591410_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1718544749001_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ComplaintParticipant_ParticipantId_m_rel</label>
        <referenceTo>ssot__AccountContact__dlm</referenceTo>
        <relationshipLabel>ComplaintParticipant_ParticipantId_m_rel</relationshipLabel>
        <relationshipName>rel_1718544749001_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1718549025967_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ComplaintParticipant_ComplaintId_map_rel</label>
        <referenceTo>ssot__Complaint__dlm</referenceTo>
        <relationshipLabel>ComplaintParticipant_ComplaintId_map_rel</relationshipLabel>
        <relationshipName>rel_1718549025967_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>